--- a/front-end/index.html
+++ b/front-end/index.html
@@ -2,11 +2,32 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orinoco</title>
+    <title>Orinoco - Ours en peluche fait main </title>
 </head>
+
 <body>
+<!--               HEADER     -->
+
+<!--              MAIN CONTAINER     -->
+    <h2 class="text-center"> Notre sélection d'ours en peluche faits main </h2>
+    <div class = "container-fluid" id="card">
+                
+    </div>
+<!--                    FOOTER           -->
+    <footer>
+        <div class="col-12 container-fluid">
+            <ul class="footer-nav">
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </footer>
+<!--            SCRIPT JS             -->
+    <script src="index.js"></script>
     
+<!--            SCRIPT BOOTSTRAP              -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
