product page improvement

--- a/front-end/product.html
+++ b/front-end/product.html
@@ -6,9 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Votre sélection d'ours Orinoco</title>
 </head>
+
 <!--               BODY       -->
 <body>
 
+<!--               HEADER     -->
+<header>
+    <div class="bg-primary">
+        <div class="container">
+            <div class="row">
+                <nav class=" col navbar navbar-expand-lg bg-primary navbar-light">
+                    <h1>ORINOCO</h1>
+            <div id="navbarContent" class="collapse navbar-collapse">
+                <ul class="navbar-nav d-flex align-items-center">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Accueil</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="cart.html">Panier</a></li>
+                </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+</div>
+</header>
 <!--              MAIN CONTAINER     -->
     <div class="container-fluid">
         <div class="row">
@@ -21,15 +40,15 @@
     <footer>
         <div class="bg-light">
             <div class="container">
-               <div class="row">
-                 <div class="col-12">
-                   <ul class="footer-nav text-center text-info">
-                        <li class="list-inline-item font-weight-bold"><a href="#">Mentions légales</a> </li>
-                        <li class="list-inline-item font-weight-bold"><a href="#">CGVU</a></li>
-                        <li class="list-inline-item font-weight-bold"><a href="#">Contact</a></li>
-                    </ul>
-                 </div>
-               </div>
+                <div class="row">
+                    <div class="col-12">
+                        <ul class="footer-nav text-center text-info">
+                            <li class="list-inline-item font-weight-bold"><a href="#">Mentions légales</a> </li>
+                            <li class="list-inline-item font-weight-bold"><a href="#">CGVU</a></li>
+                            <li class="list-inline-item font-weight-bold"><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
@@ -37,8 +56,5 @@
     <script src="product.js"></script>
     
 <!--            SCRIPT BOOTSTRAP              -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
