--- a/front-end/confirm.html
+++ b/front-end/confirm.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Votre sélection d'ours Orinoco</title>
+    <title>Confirmation de votre commande</title>
 </head>
 
 <body>
@@ -34,8 +34,8 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
-            <h2 class="text-center"> Sélectionnez vos préférences </h2>
-        <div id="card">
+            <h2 class="text-center"> Merci pour votre commande ! </h2>
+        <div id="confirm">
                 
         </div>
         </div>
@@ -52,7 +52,7 @@
                 <div class="col-12">
                     <ul class="footer-nav text-center text-info">
                         <li class="list-inline-item font-weight-bold"><a href="#">Mentions légales</a> </li>
-                        <li class="list-inline-item font-weight-bold"><a href="#">CGVU</a></li>
+                        <li class="list-inline-item font-weight-bold"><a href="#">CGVU</a></li>    
                         <li class="list-inline-item font-weight-bold"><a href="#">Contact</a></li>
                     </ul>
                 </div>
@@ -63,6 +63,6 @@
 
 <!-- SCRIPT JS -->
 
-<script src="product.js"></script>
+    <script src="confirm.js"></script>
 </body>
 </html>
